--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:textSize="100sp"
+        android:textSize="300sp"
+        android:textColor="#dedede"
         android:gravity="center"
         android:layout_gravity="center"
-        android:text="10:000"/>
+        android:text="5"/>
 
 </LinearLayout>
